force-app/main/default/objects/Control__c/fields/Control_Category__c.field-meta.xml
<CustomField>
    <fullName>Control_Category__c</fullName>
    <label>Control Category</label>
    <referenceTo>Control_Category__c</referenceTo>
    <relationshipLabel>Controls</relationshipLabel>
    <relationshipName>Controls</relationshipName>
    <type>Lookup</type>
</CustomField>