force-app/main/default/objects/Control__c/fields/Control_ID__c.field-meta.xml
<CustomField>
    <fullName>Control_ID__c</fullName>
    <label>Control ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>