force-app/main/default/objects/Control__c/fields/Control_Owner__c.field-meta.xml
<CustomField>
    <fullName>Control_Owner__c</fullName>
    <label>Control Owner</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Controls</relationshipLabel>
    <relationshipName>Controls_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>