force-app/main/default/objects/Control__c/fields/Framework__c.field-meta.xml
<CustomField>
    <fullName>Framework__c</fullName>
    <label>Framework</label>
    <referenceTo>Framework__c</referenceTo>
    <relationshipLabel>Controls</relationshipLabel>
    <relationshipName>Controls</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>