force-app/main/default/objects/Control__c/fields/Implementation_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Guidance__c</fullName>
    <label>Implementation Guidance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>